Made compatable with IE9

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                             <div class="range-input-wrapper">
 
-                                <input type="range" min="0" max="150 step="1" value="70" data-orientation="vertical">
+                                <input type="range" min="0" max="150" step="1" value="70" data-orientation="vertical" data-rangeslider>
                             
                             </div>
 
@@ -171,13 +171,6 @@
         <!-- <script src="js/lib/tween-max.min.js"></script> -->
         <script src="js/plugins.js"></script>
         <script src="js/scripts.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
     </body>
 </html>
